--- a/school-management/package.json
+++ b/school-management/package.json
@@ -26,7 +26,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@nestjs/graphql": "^10.0.0",
+    "apollo-server-express": "^3.6.3",
+    "graphql": "^16.3.0",
+    "graphql-tools": "^8.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
