--- a/school-management/package.json
+++ b/school-management/package.json
@@ -21,16 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.2",
     "@nestjs/common": "^8.2.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.6.3",
+    "graphql": "14.6.0",
+    "graphql-tools": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "@nestjs/graphql": "^10.0.0",
-    "apollo-server-express": "^3.6.3",
-    "graphql": "^16.3.0",
-    "graphql-tools": "^8.2.0"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
