--- a/school-management/package.json
+++ b/school-management/package.json
@@ -26,12 +26,16 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.6.3",
     "graphql": "14.6.0",
     "graphql-tools": "^8.2.0",
+    "mongodb": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
