--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.6.7",
     "graphql": "^16.3.0",
     "graphql-tools": "^8.2.4",
+    "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
