--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.6.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.3.0",
     "graphql-tools": "^8.2.4",
     "mongodb": "^3.7.3",
