--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "dev": "docker-compose up --build -d",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:dev:watch": "docker-compose up --build -d",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
