chore: setup env variables

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev": "docker-compose up --build -d && nest start --watch",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "docker-compose --env-file ./.env.dev up --build -d",
+    "start:dev": "APP_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,8 +22,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
@@ -46,6 +48,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/hapi__joi": "^17.1.8",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
